...
    // Function below runs when the view is shown to the user
    override func viewDidAppear(_ animated: Bool) {
        super.viewDidAppear(animated)
        // CMPT 275 - Photo Mode Instructions Alert
        if (cameraDetected == true)
        {
            let alertController = UIAlertController(title: "Instructions", message: "Capture Button (bottom): Captures 6 photos\nFlash button (Lightning Bolt): Turn On/Off Flash\nSwitch Camera: Switch between Front/Rear Camera\nHVAA Button: Turn On/Off Horizontal Alignment Assistance", preferredStyle: .alert)
            alertController.addAction(UIAlertAction(title: "OK", style: .cancel, handler: nil))
            present(alertController, animated: true, completion: nil)
        }
        else
        {
            let alertController = UIAlertController(title: "Error", message: "No Camera Detected", preferredStyle: .alert)
            alertController.addAction(UIAlertAction(title: "OK", style: .cancel, handler: nil))
            present(alertController, animated: true, completion: nil)
        }
        //Request Photo Access
        let photos = PHPhotoLibrary.authorizationStatus()
        if photos == .notDetermined {
...
    // Toggle Flash Button Functionality
    // Input: Flash button
    // Output: Corresponding Flash image (on/off) (type UIImage) to Flash button
    @IBAction func toggleFlash(_ sender: UIButton) {
        if cameraController.flashMode == .on {
            cameraController.flashMode = .off
            toggleFlashButton.setImage(#imageLiteral(resourceName: "Flash Off Icon"), for: .normal)
        }
            
        else {
            cameraController.flashMode = .on
            toggleFlashButton.setImage(#imageLiteral(resourceName: "Flash On Icon"), for: .normal)
        }
    }
    
    // CMPT275 - HVAA Feature
    // Input: HVAA button
    // Output: Corresponding HVAA text (HVAA ON / HVAA OFF) to HVAA button
    @IBAction func HVAA_toggle(_ sender: UIButton) {
        if cameraController.HVAA == false {
            cameraController.HVAA = true
            HVAA_Button.setTitle("HVAA ON", for: .normal)
        }
        else {
            cameraController.HVAA = false
            HVAA_Button.setTitle("HVAA OFF", for: .normal)
        }
    }
    
    // Switch Camera Button Functionality
    // Input: HVAA button
    // Output: NULL
...
        catch {
            print(error)
        }
        
        switch cameraController.currentCameraPosition {
        case .some(.front):
            toggleCameraButton.setImage(#imageLiteral(resourceName: "Front Camera Icon"), for: .normal)
            
        case .some(.rear):
            toggleCameraButton.setImage(#imageLiteral(resourceName: "Rear Camera Icon"), for: .normal)
            
        case .none:
            return
        }
    }
    
...
