...
            button.backgroundColor = UIColor.white
            let xPostion:CGFloat = 210
            let yPostion:CGFloat = 30
            let buttonWidth:CGFloat = 150
            let buttonHeight:CGFloat = 45
            button.frame = CGRect(x:xPostion, y:yPostion, width:buttonWidth, height:buttonHeight)
            button.setTitle("Firebase", for: .normal)
            button.addTarget(self, action: #selector(LoadFBGallery), for: .touchUpInside)
            return button
        }()
        
        // Setup Collection View Grid for Gallery
        let layout = UICollectionViewFlowLayout()
...
